# LanceApp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
installer/: miku_installer.iss
src/: animations.py  chats.py  components.py  images.py  main.py  main_ui.py  miku_speech.json  miku_speech.txt  notifications.py  screen_test.py  setup.py  styles.py  test.py  test2.py  utilities.py
src/assets/data/: miku_speech.json
src/tests/: screen_test.py
src/ui/: animations.py  components.py  images.py  menus.py  styles.py
src/utilities/: data.py  debug.py  helpers.py  math.py  monitor.py  notifications.py  tasks.py  timers.py
tools/: build_app.py  bump_build.py
