[project]
name = "MikuMiku"
version = "0.4.0"
description = "A Flet App Made for Lance"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
authors = [
  { name = "MetaDusk", email = "andredcxxv@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
  "flet==0.70.0.dev5623",
  "screeninfo==0.8.1",
  "desktop_notifier==6.2.0"
]

[tool.flet]
org = "com.metadusk"
product = "MikuMiku App"
company = "MetaDusk Inc."
copyright = "Copyright (C) 2025 MetaDusk"
compile_app = true
compile_packages = true
cleanup_on_compile = true
build_number = 7

[tool.flet.assets]
include = [
  "data/**",
  "images/**",
  "fonts/**"
]

[tool.flet.splash]
color = "#ffffff"
dark_color = "#333333"

[tool.flet.app]
path = "src"

[tool.flet.app.boot_screen]
show = true
message = "Preparing Hatsune Miku... Just a bit longer..."

[tool.flet.app.startup_screen]
show = true
message = "Waking Hatsune Miku up... Please wait."

[tool.uv]
dev-dependencies = [
  "flet==0.70.0.dev5623",
]
