[project]
name = "MikuMiku"
version = "0.4.2"
description = "A Flet App Made for Lance"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
authors = [
  { name = "MetaDusk", email = "andredcxxv@gmail.com" }
]
license = { text = "AGPL-3.0" }

dependencies = [
  "flet==0.70.0.dev6214",
  "flet-desktop==0.70.0.dev6214",
  "screeninfo==0.8.1",
  "desktop_notifier==6.2.0",
  "pip>=25.2", # Only needed since flet needs it
]

[tool.flet]
org = "com.metadusk"
product = "MikuMiku App"
company = "MetaDusk Inc."
copyright = "Copyright (C) 2025 MetaDusk"
compile_app = true
compile_packages = true
cleanup_on_compile = true
build_number = 1

[tool.flet.assets]
include = [ 
  "data/**",
  "images/**",
  "fonts/**"
]

[dependency-groups]
dev = [
    "tomlkit>=0.13.3",
]
